syntax = "proto2";

// 分配协议号 10001
message request_login
{
    required bytes auth_info = 1; // 认证信息(测试环境随便填字符)
};

// 分配协议号 30001
message response_login
{
    required int32 ret = 1;
    required uint64 session_id = 2;
}

// 分配协议号 30002
message syn_enter_scene
{
    //同步玩家场景信息场景
    required int32 ret = 1;
    required int32 scene_id = 2; //场景id
    required bytes scene_info = 3;
}

// 分配协议号 30003
message syn_player_data
{
    // 同步玩家信息
    required int32 ret = 1;
    required uint64 session = 2;
    required bytes name = 3;
    required int32 sex = 4;
    required bytes money_info = 5;
    required bytes bag_item_info = 6;
}
